[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "stealth-crawler"
dynamic = ["version"]
description = "A stealth web crawler using headless Chrome"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Kaden Gruizenga"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "pydoll",
    "html2text",
    "rich",
    "click",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "aiohttp",
]

[project.scripts]
stealth-crawler = "stealthcrawler.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/stealthcrawler/_version.py"